touchscreen_ws/log/build_2021-10-26_17-48-25/reachy_touchscreen/stderr.log
  File "/home/reachy/reachy_repo/Fall2021/reachy_touchscreen/RTS_ws/install/reachy_touchscreen/lib/python3.8/site-packages/reachy_touchscreen/screen_processing.py", line 36
    goal_x_px = #___ ?
                ^
SyntaxError: invalid syntax

